syntax = "proto3";
package sales;

option go_package = "pb/sales;sales";
option java_package = "com.wiradata.erpapplication.sales";
option java_multiple_files = true;

message Customer {
  string id = 1;
  string code = 2;
  string name = 3;
  string address = 4;
  string phone = 5;
  string created_at = 6;
  string created_by = 7;
  string updated_at = 8;
  string updated_by = 9;
}