syntax = "proto3";
package sales;

option go_package = "pb/sales;sales";
option java_package = "com.wiradata.erpapplication.sales";
option java_multiple_files = true;

import "sales/customer_message.proto";
import "sales/generic_message.proto";

message ListCustomerRequest {
  Pagination pagination = 1;
}

message CustomerPaginationResponse {
  Pagination pagination = 1;
  uint32 count = 2;
}

message ListCustomerResponse {
  CustomerPaginationResponse pagination = 1;
  Customer customer = 2; 
}

service CustomerService {
  rpc CustomerCreate(Customer) returns (Customer) {}
  rpc CustomerUpdate(Customer) returns (Customer) {}
  rpc CustomerView(Id) returns (Customer) {}
  rpc CustomerList(ListCustomerRequest) returns (stream ListCustomerResponse) {}
}